Projects page almost done

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           Courtois
         </h1>
         <p style="font-family:'Courier New', Courier, monospace; color: white; text-shadow: 2px 2px 2px black; font-size: 1.2em;">
-          Site WIP! Not all links work at this time.
+          Site WIP!
         </p>
       </div>
     </section>
