--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>Projects</title>
-<script src="projects.js" defer></script>
+<script src="projects.js" type="module" defer></script>
 <link href="reset.css" rel="stylesheet" />
 <link href="font/webfontkit-20221214-125225/stylesheet.css" rel="stylesheet" />
 <link href="styles.css" rel="stylesheet" />
@@ -20,6 +20,12 @@
       </ul>
     </nav>
   </header>
+  <div id="switch-container">
+    <div class="switch">
+      <input id="switch-save" class="switch-check" type="checkbox"></input>
+      <label class="switch-label" for=""><span class="switch-span">Personal</span></label>
+    </div>
+  </div>
   <section id="projects">
     <div id="lists">
       
