broken but working

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 <link href="reset.css" rel="stylesheet" />
 <link href="font/webfontkit-20221214-125225/stylesheet.css" rel="stylesheet" />
 <link href="styles.css" rel="stylesheet" />
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </head>
 <body>
   <header>
@@ -18,6 +19,14 @@
       </ul>
     </nav>
   </header>
+  <div id="about-container">
+    <div id="about-info">
+      <h1>About me</h1>
+      <p id="about-text">&emsp;Hello! I am currently a Computer Science student at Quincy University. Before school, I studied Python programming in my spare time. During my schooling, I built upon my previous knowledge by learning languages such as Java and C++. I then achieved an Associates in Computer Science at John Wood Community College. I pushed myself to leave my comfort zone by learning more about front end as well, such as the HTML, CSS, and JavaScript. My knowledge was expanded upon after transferring to a four year University where I dived deeper into the nuances of programming past the fundamentals. I am also pursuing a minor in Cyber Security. Currently, I strive to learn more about technology by developing personal projects. There is still so much I don't know, which is both overwhelming and exciting. </p>
+    </div>
+    <div class="badge-base LI-profile-badge" id="linkedin" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="pierson-courtois-b5391725a" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/pierson-courtois-b5391725a?trk=profile-badge"></a></div>
+    <a id="resume" href="Courtois-Resume.pdf" target="_blank">Resume</a>
+  </div>
 </body>
 <footer>
   <p>Made by Pierson Courtois | Developed with HTML, CSS, JavaScript</p>
